--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,5 +44,7 @@ jobs:
 
       - name: Update Function Code
         run: |
-          aws lambda update-function-code --function-name dataingestion --zip-file file://function.zip
+          aws lambda update-function-code \
+            --function-name dataingestion \
+            --zip-file fileb://function.zip
             
